2003-10-08  Roland Cassebohm  <roland.cassebohm@visionsystems.de>

	* src/flash.c: Fix parse error if CYGSEM_IO_FLASH_READ_INDIRECT 
	is not defined.

2003-09-19  Gary Thomas  <gary@mlbassoc.com>

	* src/flash.c: 
	* include/flash.h: 
	* cdl/io_flash.cdl: Add support for NAND (indirectly accessed)
	devices.  This includes a generic "flash_read_buf()" function.

2003-04-14  Jani Monoses  <jani@iv.ro>

	* include/flash_dev.h: Include <cyg/infra/cyg_type.h> 

2003-03-19  Thomas Koeller <thomas.koeller@baslerweb.com>

	* src/flashiodev.c: Fixed trivial error.

2003-03-03  Knud Woehler <knud.woehler@microplex.de>

	* src/flashiodev.c:
	* cdl/io_flash.cdl: Add CYGNUM_IO_FLASH_BLOCK_CFG_FIS_1 / 
	CYGNUM_IO_FLASH_BLOCK_CFG_STATIC_1. Initialize the block device 
	from the FIS table.
	
2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/io_flash.cdl: Remove irrelevant doc link - default to top
	level.

2002-01-31  Jonathan Larmour  <jlarmour@redhat.com>

	* src/flashiodev.c: Fix bounds checking and offsetting.

	* cdl/io_flash.cdl (CYGNUM_IO_FLASH_BLOCK_LENGTH_1): Default to
	0x100000 for convenience.

2002-01-30  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/io_flash.cdl: Allow specification of an offset and length
	of the region of flash.
	* src/flashiodev.c: Use it.

2002-01-24  Jesper Skov  <jskov@redhat.com>

	* include/flash.h: Add a comment about the obvious: the flash
	caching macros should be called with interrupts disabled.

2002-01-23  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/io_flash.cdl: Add CYGPKG_IO_FLASH_BLOCK_DEVICE and
	CYGDAT_IO_FLASH_BLOCK_DEVICE_NAME_1 to allow exporting flash
	as block devices accessible from file systems.
	* src/fileiodev.c: New file implementing this.
	* include/flash.h: Add typedefs for the various structures used
	to configure the block devices.

2002-01-18  Paul Fine  <pfine@delcomsys.com>

	* src/flash.c : Modified flash_verify_addr, flash_erase,
	flash_lock and flash_unlock to to work properly when the location