@@ -1,3 +1,10 @@
+2003-11-20  Jani Monoses  <jani@iv.ro>
+
+	* cdl/io_flash.cdl:
+	* src/flash.c: Remove handling of CYGHWR_IO_FLASH_DEVICE_NOT_IN_RAM
+	now that all flash drivers use ELF sections to specify which parts
+	go in RAM.
+
 2003-10-08  Roland Cassebohm  <roland.cassebohm@visionsystems.de>
 
 	* src/flash.c: Fix parse error if CYGSEM_IO_FLASH_READ_INDIRECT 
